agregado el 2do boton

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                    <li><a href="#"></a>Proyectos</li>
                    <li><a href="#"></a>Trabajos</li>
                    <li><a href="#"></a>Contactenos</li>
+                   <li><a href="#"></a>esto es una prueba</li>
+
                 </ul>
             </nav>
 
