se realizo cambio de fondo a color verde pero se realizo un cambio adicioal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>       
         <meta charset="UTF-8">
         <title>OCSYSTEM</title>
+        <link rel="stylesheet" href="css/estilos.css" type="text/css"
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="main.js"></script>
             </head>
@@ -23,6 +24,8 @@
                    <li><a href="#"></a>Trabajos</li>
                    <li><a href="#"></a>Contactenos</li>
                    <li><a href="#"></a>esto es una prueba</li>
+                   <li><a href="#"></a>esto es una prueba 2222 </li>
+
 
                 </ul>
             </nav>
